# shepherd

./: .bumpversion.cfg  .gitignore  .gitmodules  .travis.yml  Dockerfile  LICENSE  Pipfile  README.md  ansible.cfg  build.sh  build_firmware.sh  build_kernel.sh  install_package.sh  restart_shepherd.sh  run_virtcap.sh  virtcap_settings.yml
.github/workflows/: codeql-analysis.yml
deploy/: bootstrap.yml  deploy.yml  dev_rebuild_pru.yml  fetch-hostkeys.yml  install.yml  setup-dev-nfs.yml  setup-ext-storage.yml  setup_linux_configuration.yml  setup_linux_performance.yml  setup_linux_security.yml  sshd_banner.text
deploy/roles/dev-host/tasks/: main.yml
deploy/roles/gps-client/tasks/: main.yml
deploy/roles/gps-host/files/: 91-hw-pps.rules  chrony.override.conf  gpsd.override.conf  ublox_config.ubx
deploy/roles/gps-host/tasks/: configure_ublox.yml  main.yml  systemd.yml
deploy/roles/gps-host/templates/: chrony.conf  gpsd  ublox-config.service
deploy/roles/gps-host/vars/: main.yml
deploy/roles/ntp-client/tasks/: main.yml
deploy/roles/ptp-client/tasks/: main.yml
deploy/roles/ptp-host/tasks/: main.yml
deploy/roles/ptp-server/tasks/: main.yml
deploy/roles/ptp-slave/tasks/: main.yml
deploy/roles/ptp-slave/templates/: phc2sys.service  phc2sys_mands.conf  ptp4l.service  ptp_restart.conf
deploy/roles/sheep/files/: shepherd-gui.service  shepherd-launcher.service  shepherd.service
deploy/roles/sheep/handlers/: main.yml
docs/: conf.py  index.rst  requirements.txt
docs/dev/: contributing.rst  data_handling.rst  gps_snyc.rst  gps_sync.rst  sysfs.rst  tests.rst  virtcap.rst
docs/user/: api.rst  basics.rst  calibration.rst  cli.rst  data_format.rst  getting_started.rst  hardware.rst  intro.rst  performance.rst  virtcap.rst
extra/: calibrate.py  convert_bin_to_hdf5.py  downsampling.py  hdf2csv.py  logo.dxf  plot.py
hardware/: shepherd.lbr
hardware/cape/: bom.txt  bom_beta_layout.csv  cape.brd  cape.sch
hardware/cape/manufacturing/: bom_beta_layout.csv
hardware/capelets/gps/: bom.csv  bom.txt  capelet_gps.brd  capelet_gps.sch
hardware/capelets/kinetic/: bom.txt  capelet_kinetic.brd  capelet_kinetic.sch
hardware/capelets/nrf52840/: bom.txt  capelet_nrf52.brd  capelet_nrf52.sch
hardware/capelets/rf/: capelet_rf.brd  capelet_rf.sch
hardware/capelets/solar/: bom.txt  capelet_solar.brd  capelet_solar.sch
hardware/capelets/storage/: bom.txt  capelet_storage.brd  capelet_storage.sch
hardware/housing/harvester/: piezo_harvester_case.stl  piezo_harvester_clamp.stl  piezo_harvester_cover.stl
hardware/housing/shepherd/: clamp_powerbank_belt.stl  shepherd_cover.stl  shepherd_plate.stl  shpherd_wall.stl
inventory/: .gitignore  example.yml
inventory/group_vars/: sheep
software/deploy/: deploy.yml  hosts
software/deploy/group_vars/: sheep
software/device-tree/: Makefile
software/firmware/: .gitignore  CMakeLists.txt  Makefile
software/firmware/debian/: changelog  control  postinst  postrm
software/firmware/device-tree/: BB-SHPRD-00A0.dts  BB-SHPRD2-00A0.dts  BB-SHPRDVCAP-00A0.dts  Makefile  am335x_pinctrl.h
software/firmware/include/: commons.h  pru_comm_format.h  shepherd_config.h
software/firmware/lib/: AM335x_PRU.cmd  Makefile
software/firmware/lib/include/: gpio.h  iep.h  int_optimized.h  intc.h  printf.h  rpmsg.h  simple_lock.h  spi_transfer_sys.h  stdint_fast.h  sys_gpio.h
software/firmware/lib/src/: iep.c  printf.c  rpmsg.c  simple_lock.c  spi_transfer_sys.c
software/firmware/pru0-shepherd-fw/: Makefile  lookup_table.c  main.c  ringbuffer.c  sampling.c  spi_transfer_pru.asm  spi_transfer_sys.c  virtcap.c
software/firmware/pru0-shepherd-fw/include/: hw_config.h  lookup_table.h  resource_table.h  resource_table_def.h  ringbuffer.h  rpmsg_format.h  sampling.h  virtcap.h
software/firmware/pru1-shepherd-fw/: Makefile  main.c
software/firmware/pru1-shepherd-fw/include/: debug_routines.h  kernel_pru_comm.h  resource_table.h
software/gps/: BB-GPS-00A0.dts  Makefile  chrony.conf  chrony.override.conf  chrony.path  gpsd.override.conf  ublox_config.ubx
software/gps/debian/: changelog  control  install  postinst  postrm  rules  shepherd-gps.ublox-config.service
software/kernel-module/: .gitignore  module_base.c  pru_comm.c  pru_comm.h  rpmsg_pru.c  rpmsg_pru.h  sync_ctrl.c  sync_ctrl.h  sysfs_interface.c
software/kernel-module/debian/: changelog  postinst  postrm  shepherd-dkms.dkms
software/kernel-module/src/: Makefile  commons.h  module_base.c  pru_comm.c  pru_comm.h  rpmsg_pru.c  sync_ctrl.c  sync_ctrl.h  sysfs_interface.c  sysfs_interface.h
software/meta-package/: config.yml  example_config.yml  ns-control
software/meta-package/debian/: changelog  control  install  rules  shepherd.dirs  shepherd.service  shepherd.shepherd-rpc.service
software/openocd/: shepherd.cfg
software/openocd/debian/: changelog  control  rules  shepherd-openocd.service
software/packaging/: Dockerfile  build.sh
software/packaging/shepherd/: ns-control
software/packaging/shepherd-firmware/: Makefile
software/pps-gmtimer/debian/: changelog  control  pps-gmtimer-dkms.dkms  rules
software/pps-gmtimer/src/: Makefile  pps-gmtimer.c
software/ptp/: override.conf  phc2sys_mands.conf  ptp_restart.conf
software/ptp/debian/: changelog  control  install  postinst
software/python-package/: .gitignore  setup.cfg  setup.py
software/python-package/debian/: changelog  control  postinst  rules
software/python-package/shepherd/: __init__.py  calibration.py  calibration_default.py  cli.py  commons.py  const_reg.py  datalog.py  eeprom.py  emulation.py  gui.py  launcher.py  readh5.py  recording.py  shepherd_io.py  sysfs_interface.py
software/python-package/tests/: calib_example.yml  conftest.py  example_calib_meas.yml  example_capedata.yml  test_calibration.py  test_const_reg.py  test_datalogging.py  test_eeprom.py  test_emulation.py  test_recording.py  test_sheep_cli.py  test_sysfs_interface.py  virtcap_settings.yml
software/shepherd-herd/: README.md  setup.py
software/shepherd-herd/shepherd_herd/: __init__.py
(+21 files in other folders)
